--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -2,12 +2,12 @@ body {
   margin: 0;
   padding: 0;
 }
-
-body, html, #app {
+body,
+html,
+#app {
   width: 100%;
   height: 100%;
 }
-
 .el-form-item__content {
   line-height: unset !important;
 }
